# docs/swagger.json
@@ -3,19 +3,14 @@
     "info": {
         "description": "This is a sample online-shop server",
         "title": "Online shop API Swagger",
-        "termsOfService": "http://swagger.io/terms/",
-        "contact": {
-            "name": "API Support",
-            "url": "http://www.swagger.io/support",
-            "email": "support@swagger.io"
-        },
+        "contact": {},
         "license": {
             "name": "Apache 2.0",
             "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
         },
         "version": "1.0"
     },
-    "host": "localhost:8080",
+    "host": "127.0.0.1:8080",
     "paths": {
         "/products": {
             "get": {
@@ -27,6 +22,20 @@
                     "products"
                 ],
                 "summary": "Получить все товары",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Максимальное количество товаров",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Сдвиг",
+                        "name": "offset",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -185,7 +194,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/types.Product"
+                            "$ref": "#/definitions/types.SuccessResponse"
                         }
                     },
                     "404": {
